made changes to api and frontend