@@ -7,10 +7,7 @@ import java.util.Map;
 import java.util.Objects;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -20,11 +17,13 @@ import reactor.core.publisher.Mono;
 public class GeoAddressController {
 
     private static final String NOMINATIM_URL = "https://nominatim.openstreetmap.org";
-    private WebClient webClient;
+    private final WebClient webClient;
 
     public GeoAddressController(WebClient.Builder webclientBuilder) {
         this.webClient = webclientBuilder.baseUrl(NOMINATIM_URL).build();
     }
+
+    @CrossOrigin(origins = "http://localhost:63342")
     @GetMapping("/geocode")
     public Flux<Map<String, Object>> geocodePostcodes(@RequestParam List<String> postcodes) {
         return Flux.fromIterable(postcodes)
@@ -33,8 +32,8 @@ public class GeoAddressController {
                     if (!response.isEmpty()) {
                         Map<String, Object> location = new HashMap<>();
                         location.put("postcode", postcode);
-                        location.put("lat", response.get(0).get("lat").asText());
-                        location.put("lon", response.get(0).get("lon").asText());
+                        location.put("lat", response.getFirst().get("lat").asText());
+                        location.put("lon", response.getFirst().get("lon").asText());
                         return location;
                     }
                     return null;}))
